--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
+<!DOCTYPE html>
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>
+        Simple Interest Calculator
+    </title>
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+        <div class="maindiv">
+            Amount <input type="number"  id="principal">  <br/>
+            Rate <input type="range" min="0" max="20" step="0.25" value="10.25" id="rate" onchange="updateRate()">  
+            <span id="rate_val">
+                10.25%
+            </span>  <br/>
+            No. of Years <select id="years">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            </select>  <br/>
+            Interest : <span id="result"></span><br>
+        </div>
+        <button onclick="compute()">Compute Interest</button>
     </body>
+    <footer>
+        &#169; This Calculator belongs to Marco Nardi for the course on Coursera 
+        "Introduction to Web Development with HTML, CSS, JavaScript"
+    </footer>
 </html>
